# SDL2_Game1

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
src/: Application.cpp  Application.h  Audio.cpp  Audio.h  Base.cpp  Base.h  Boss.cpp  Boss.h  CMakeLists.txt  Deleter.hpp  Explosion.cpp  Explosion.h  FireBall.cpp  FireBall.h  FirePillar.cpp  FirePillar.h  Global.hpp  Player.cpp  Player.h  Ui.cpp  Ui.h  main.cpp  scenes.cpp  scenes.h
